Fixed survey moc issues

--- a/dmu0/2_Make_coverage_MOCs.ipynb
+++ b/dmu0/2_Make_coverage_MOCs.ipynb
@@ -148,8 +148,8 @@
       "UHS has a total area of 67.70609791736013 square degrees.\n",
       "GOODS-ACS has a total area of 0.1116223665109334 square degrees.\n",
       "VIPERS-MLS has a total area of 14.760585211531156 square degrees.\n",
-      "SEIP has a total area of 0.0 square degrees.\n",
-      "GAIA has a total area of 0.0 square degrees.\n",
+      "SEIP has a total area of 117.27489446425253 square degrees.\n",
+      "GAIA has a total area of 1123.9371343428127 square degrees.\n",
       "2MASS-extended-sources has a total area of 1582.9078148682606 square degrees.\n",
       "VISTA-VIDEO has a total area of 13.91473458471678 square degrees.\n",
       "SpARCS has a total area of 33.18570351655756 square degrees.\n",
@@ -163,7 +163,7 @@
       "Ultradeep-Ks-GOODS-N has a total area of 0.38624719756422105 square degrees.\n",
       "Bootes_Brown has a total area of 9.632615786468984 square degrees.\n",
       "SCUBA2-Duivenvoorden2018 has a total area of 0.0 square degrees.\n",
-      "GALEX-GCAT has a total area of 0.0 square degrees.\n",
+      "GALEX-GCAT has a total area of 991.9983701456763 square degrees.\n",
       "SPLASH-SXDF has a total area of 4.351786727781925 square degrees.\n",
       "SpIES has a total area of 74.73319782261152 square degrees.\n",
       "CANDELS-EGS has a total area of 0.06224009881174119 square degrees.\n",
@@ -210,7 +210,7 @@
     "    for moc in moc_list:\n",
     "        survey_moc =survey_moc + MOC(filename=moc)\n",
     "    print(\"{} has a total area of {} square degrees.\".format(survey, survey_moc.area_sq_deg))\n",
-    "    survey_moc.write('./dmu0_{}/survey_coverage_MOC.fits'.format(survey))"
+    "    survey_moc.write('./dmu0_{}/survey_coverage_MOC.fits'.format(survey), overwrite=True)"
    ]
   },
   {
