--- a/dmu1/dmu1_ml_XMM-LSS/1.6.1_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.6.1_DECaLS.ipynb
@@ -863,17 +863,18 @@
     "flux_to_mag_vect = np.vectorize(flux_to_mag)\n",
     "\n",
     "\n",
-    "# Adding flux and band-flag columns\n",
+    "# Adding magnitude and band-flag columns\n",
     "for col in catalogue.colnames:\n",
     "    catalogue[col].unit = None\n",
     "    if col.startswith('f_'):\n",
     "        \n",
     "        #Replace 0 flux with NaN and \n",
-    "        catalogue[col][catalogue[col] == 0.0] = np.nan\n",
+    "        mask = (catalogue[col] <= 0.0) | (catalogue[errcol] <= 0.0)\n",
+    "        catalogue[col][mask] = np.nan\n",
     "        \n",
     "        #Replace 1/sigma^2 with sigma \n",
     "        errcol = \"ferr{}\".format(col[1:])\n",
-    "        catalogue[errcol][catalogue[errcol] == 0.0] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan\n",
     "        catalogue[errcol] = np.sqrt(1/np.array(catalogue[errcol]))\n",
     "        #catalogue[errcol][catalogue[errcol] == None] = np.nan\n",
     "        \n",
@@ -887,7 +888,7 @@
     "        \n",
     "        if 'ap' in col:\n",
     "            mag += mag_corr[col[-1]]\n",
-    "            catalogue[col],catalogue[errcol] = mag_to_flux(mag,error)\n",
+    "            catalogue[col],catalogue[errcol] = mag_to_flux(mag,error) * 1.e6\n",
     "        \n",
     "        catalogue.add_column(Column(mag, name=\"m{}\".format(col[1:])))\n",
     "        catalogue.add_column(Column(error, name=\"m{}\".format(errcol[1:])))\n",
@@ -1218,7 +1219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
