--- a/dmu28/dmu28_ELAIS-N1/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_ELAIS-N1/CIGALE_catalogue_preparation.ipynb
@@ -390,7 +390,8 @@
     "xid = {}\n",
     "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
     "    xid[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "                                   ~master_catalogue['flag_{}'.format(band)])\n"
+    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "xid = np.sum(list(xid.values()), axis=0) >= 1"
    ]
   },
   {
