Fixed DECaLS on Bootes and NGP

--- a/dmu1/dmu1_ml_Bootes/1.1_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1.1_DECaLS.ipynb
@@ -169,8 +169,8 @@
     "    magnitudes[band], magnitude_errors[band] = flux_to_mag_vect(flux[band] * 3.631e-6 ,flux_errors[band] * 3.631e-6)\n",
     "    \n",
     "    stellarities[band] = np.full(len(orig_decals),0., dtype='float32')\n",
-    "    stellarities[band][np.array( orig_decals[\"type\"]) == \"PSF \" ] = 1.\n",
-    "    stellarities[band][np.array( orig_decals[\"type\"]) == \"PSF\" ] = 1.\n",
+    "    stellarities[band][orig_decals[\"type\"] == \"PSF \" ] = 1.\n",
+    "    stellarities[band][orig_decals[\"type\"] == \"PSF\" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "nb_plot_mag_ap_evol(magnitudes['u'], stellarities['u'], labels=apertures)"
+    "#nb_plot_mag_ap_evol(magnitudes['u'], stellarities['u'], labels=apertures)"
    ]
   },
   {
@@ -252,9 +252,9 @@
     }
    ],
    "source": [
-    "nb_plot_mag_vs_apcor(magnitudes['u'][4], \n",
-    "                     magnitudes['u'][5], \n",
-    "                     stellarities['u'])"
+    "#nb_plot_mag_vs_apcor(magnitudes['u'][4], \n",
+    "#                     magnitudes['u'][5], \n",
+    "#                     stellarities['u'])"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "# Aperture correction\n",
-    "mag_corr['u'] = np.nan\n",
+    "#mag_corr['u'] = np.nan\n",
     "#mag_corr['u'], num, std = aperture_correction(\n",
     "#    magnitudes['u'][4], magnitudes['u'][5], \n",
     "#    stellarities['u'],\n",
@@ -494,7 +494,7 @@
     }
    ],
    "source": [
-    "nb_plot_mag_ap_evol(magnitudes['i'], stellarities['i'], labels=apertures)"
+    "#nb_plot_mag_ap_evol(magnitudes['i'], stellarities['i'], labels=apertures)"
    ]
   },
   {
@@ -522,9 +522,9 @@
     }
    ],
    "source": [
-    "nb_plot_mag_vs_apcor(magnitudes['i'][4], \n",
-    "                     magnitudes['i'][4], \n",
-    "                     stellarities['i'])"
+    "#nb_plot_mag_vs_apcor(magnitudes['i'][4], \n",
+    "#                     magnitudes['i'][4], \n",
+    "#                     stellarities['i'])"
    ]
   },
   {
@@ -536,7 +536,7 @@
    "outputs": [],
    "source": [
     "# Aperture correction\n",
-    "mag_corr['i'] = np.nan\n",
+    "#mag_corr['i'] = np.nan\n",
     "#mag_corr['i'], num, std = aperture_correction(\n",
     "#    magnitudes['i'][4], magnitudes['i'][5], \n",
     "#    stellarities['i'],\n",
@@ -673,7 +673,7 @@
     }
    ],
    "source": [
-    "nb_plot_mag_ap_evol(magnitudes['y'], stellarities['y'], labels=apertures)"
+    "#nb_plot_mag_ap_evol(magnitudes['y'], stellarities['y'], labels=apertures)"
    ]
   },
   {
@@ -701,9 +701,9 @@
     }
    ],
    "source": [
-    "nb_plot_mag_vs_apcor(magnitudes['y'][4], \n",
-    "                     magnitudes['y'][4], \n",
-    "                     stellarities['y'])"
+    "#nb_plot_mag_vs_apcor(magnitudes['y'][4], \n",
+    "#                     magnitudes['y'][4], \n",
+    "#                     stellarities['y'])"
    ]
   },
   {
@@ -715,7 +715,7 @@
    "outputs": [],
    "source": [
     "# Aperture correction\n",
-    "mag_corr['y'] = np.nan\n",
+    "#mag_corr['y'] = np.nan\n",
     "#mag_corr['y'], num, std = aperture_correction(\n",
     "#    magnitudes['y'][4], magnitudes['y'][5], \n",
     "#    stellarities['y'],\n",
@@ -867,17 +867,19 @@
     "flux_to_mag_vect = np.vectorize(flux_to_mag)\n",
     "\n",
     "\n",
-    "# Adding flux and band-flag columns\n",
+    "# Adding magnitude and band-flag columns\n",
     "for col in catalogue.colnames:\n",
     "    catalogue[col].unit = None\n",
     "    if col.startswith('f_'):\n",
     "        \n",
+    "        errcol = \"ferr{}\".format(col[1:])\n",
     "        #Replace 0 flux with NaN and \n",
-    "        catalogue[col][catalogue[col] == 0.0] = np.nan\n",
+    "        mask = (catalogue[col] <= 0.0) | (catalogue[errcol] <= 0.0)\n",
+    "        catalogue[col][mask] = np.nan\n",
     "        \n",
     "        #Replace 1/sigma^2 with sigma \n",
-    "        errcol = \"ferr{}\".format(col[1:])\n",
-    "        catalogue[errcol][catalogue[errcol] == 0.0] = np.nan\n",
+    "\n",
+    "        catalogue[errcol][mask] = np.nan\n",
     "        catalogue[errcol] = np.sqrt(1/np.array(catalogue[errcol]))\n",
     "        #catalogue[errcol][catalogue[errcol] == None] = np.nan\n",
     "        \n",
@@ -891,7 +893,9 @@
     "        \n",
     "        if 'ap' in col:\n",
     "            mag += mag_corr[col[-1]]\n",
-    "            catalogue[col],catalogue[errcol] = mag_to_flux(mag,error)\n",
+    "            catalogue[col],catalogue[errcol] = mag_to_flux(mag,error) \n",
+    "            catalogue[col] *= 1.e6\n",
+    "            catalogue[errcol] *= 1.e6\n",
     "        \n",
     "        catalogue.add_column(Column(mag, name=\"m{}\".format(col[1:])))\n",
     "        catalogue.add_column(Column(error, name=\"m{}\".format(errcol[1:])))\n",
@@ -1222,7 +1226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
