--- a/dmu4/dmu4_sm_EGS/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_EGS/generate_holes.ipynb
@@ -166,12 +166,14 @@
     "\n",
     "per_catalogue_params = [\n",
     "#     Field       Band        A         B            magnitude limit\n",
-    "    [field, 'megacam_r',      2.30374,  -0.0962746,  18], # Using 18 as faint limit.\n",
-    "    [field, 'gpc1_r',         2.46029,  -0.111433,   18], # Using 18 as faint limit. \n",
-    "    [field, 'irac1',          2.56501,  -0.100879,   18], # Using 18 as faint limit.\n",
-    "    [field, 'ukidss_k',       3.67944,  -0.173850,   18], # Using 18 as faint limit.\n",
-    "    [field, 'wfc_r',          3.43951,  -0.173789,   18]  # Using 18 as faint limit.\n",
+    "    [field, 'megacam_r',      2.30374,  -0.0962746,  16],\n",
+    "    [field, 'gpc1_r',         2.46029,  -0.111433,   16], \n",
+    "    [field, 'suprime_r',      2.57425,  -0.114519,   16],\n",
+    "    [field, 'irac_i1',        2.56501,  -0.100879,   16], \n",
+    "    [field, 'ukidss_k',       3.67944,  -0.173850,   16], \n",
+    "    [field, 'wfc_r',          3.43951,  -0.173789,   16] \n",
     "]   \n",
+    " \n",
     "\n",
     "#We previously took a moc of the survey to only make holes on that area, which \n",
     "#was a mistake as it led to missing holes for the XID+ run\n"
@@ -231,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
