--- a/dmu4/dmu4_sm_ELAIS-N1/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_ELAIS-N1/generate_holes.ipynb
@@ -324,6 +324,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda env:herschelhelp_internal]",
    "language": "python",
@@ -339,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
