SSDF star mask notebook ready to run

--- a/dmu4/dmu4_sm_SSDF/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_SSDF/generate_holes.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
-    "SUFFIX = SUFFIX + '_WARNING-MADE-WITH-Lockman-SWIRE-PARAMS'\n",
+    "SUFFIX = SUFFIX \n",
     "\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
@@ -166,11 +166,8 @@
     "\n",
     "per_catalogue_params = [\n",
     "#     Field       Band        A         B            magnitude limit\n",
-    "    [field, 'megacam_r',      2.30374,  -0.0962746,  18], # Using 18 as faint limit.\n",
-    "    [field, 'gpc1_r',         2.46029,  -0.111433,   18], # Using 18 as faint limit. \n",
-    "    [field, 'irac1',          2.56501,  -0.100879,   18], # Using 18 as faint limit.\n",
-    "    [field, 'ukidss_k',       3.67944,  -0.173850,   18], # Using 18 as faint limit.\n",
-    "    [field, 'wfc_r',          3.43951,  -0.173789,   18]  # Using 18 as faint limit.\n",
+    "    [field, 'vista_ks',       3.22807,  -0.137717,   16], # Using 18 as faint limit.\n",
+    " \n",
     "]   \n",
     "\n",
     "#We previously took a moc of the survey to only make holes on that area, which \n",
@@ -231,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
