--- a/dmu17/dmu17_HELP_Legacy_Maps/Bootes/create_HELP_format_MIPS_map.ipynb
+++ b/dmu17/dmu17_HELP_Legacy_Maps/Bootes/create_HELP_format_MIPS_map.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bootes_24um_v2_mosaic.fits.gz      bootes_24um_v2_mosaic_std.fits.gz\r\n",
-      "bootes_24um_v2_mosaic_cov.fits.gz  bootes_24um_v2_mosaic_unc.fits.gz\r\n"
+      "bootes_24um_v2_mosaic.fits.gz      bootes_24um_v2_mosaic_std.fits.gz\n",
+      "bootes_24um_v2_mosaic_cov.fits.gz  bootes_24um_v2_mosaic_unc.fits.gz\n"
      ]
     }
    ],
@@ -348,9 +348,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:new]",
+   "display_name": "Python (herschelhelp_internal)",
    "language": "python",
-   "name": "conda-env-new-py"
+   "name": "helpint"
   },
   "language_info": {
    "codemirror_mode": {
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
